--- a/package.json
+++ b/package.json
@@ -1,3 +1,13 @@
-"scripts": {
-  "start": "node index.js"
+
+{
+  "name": "node-app",
+  "version": "1.0.0",
+  "description": "Simple Node App",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
