Update CI configuration for Docker and SonarQube
Renamed CI job and added container run step.

--- a/ci.yml
+++ b/ci.yml
@@ -1,16 +1,15 @@
-name: CI with Docker + SonarQube
+name: CI/CD Pipeline
 
 on:
   push:
     branches: [ main ]
 
 jobs:
-  build-and-scan:
+  build-test-scan:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+    - uses: actions/checkout@v4
 
     - name: Build Docker image
       run: docker build -t my-node-app .
@@ -19,3 +18,6 @@ jobs:
       uses: SonarSource/sonarcloud-github-action@master
       env:
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+
+    - name: Run container
+      run: docker run -d -p 3000:3000 my-node-app
