Add new Docker workflow configuration file

--- a/.github/workflows/docker2.yml
+++ b/.github/workflows/docker2.yml
@@ -20,4 +20,5 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           push: true
-          tags: username/image-name:latest
+          tags: your_dockerhub_username/image-name:latest
+
