--- a/.github/workflows/mge.yml
+++ b/.github/workflows/mge.yml
@@ -10,27 +10,40 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout source code
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      # 2️⃣ Setup Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 3️⃣ Debug Docker username (TEMP – remove later)
+      - name: Debug Docker username
+        run: |
+          echo "Docker username: '${{ secrets.DOCKER_USERNAME }}'"
+          echo "Length: ${#DOCKER_USERNAME}"
+        env:
+          DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+
+      # 4️⃣ Validate secret exists
       - name: Verify Docker username secret
         run: |
           if [ -z "${{ secrets.DOCKER_USERNAME }}" ]; then
             echo "❌ DOCKER_USERNAME secret is missing"
             exit 1
           else
-            echo "✅ DOCKER_USERNAME secret is available"
+            echo "✅ DOCKER_USERNAME secret is present"
           fi
 
+      # 5️⃣ Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
+      # 6️⃣ Build and Push Docker Image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
