--- a/.github/workflows/dedcr.yml
+++ b/.github/workflows/dedcr.yml
@@ -14,18 +14,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      # 1️⃣ Checkout source code
       - name: Checkout Code
         uses: actions/checkout@v4
 
+      # 2️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
+      # 3️⃣ Login to Docker Hub
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKER_USERNAME }}  # sandip2025
+          password: ${{ secrets.DOCKER_PASSWORD }}  # Docker Hub password/token
 
+      # 4️⃣ Build and Push Docker Image
       - name: Build and Push Docker Image
         uses: docker/build-push-action@v5
         with:
@@ -33,8 +37,8 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            kumar2025/myapp:latest
-            kumar2025/myapp:${{ github.sha }}
+            sandip2025/myapp:latest
+            sandip2025/myapp:${{ github.sha }}
 
 
 
