--- a/.github/workflows/dedcr.yml
+++ b/.github/workflows/dedcr.yml
@@ -1,5 +1,3 @@
-
-
 name: Docker CI/CD with Watchtower + SonarQube
 
 on:
@@ -20,8 +18,8 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2️⃣ SonarQube Scan (Run BEFORE Docker build)
-      - name: SonarQube Scan
+      # 2️⃣ Sonar Scan
+      - name: Sonar Scan
         uses: sonarsource/sonarqube-scan-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
@@ -35,7 +33,7 @@ jobs:
       - name: Login to Docker Hub
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}   # sandip2025
+          username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       # 5️⃣ Build & Push Docker Image
@@ -50,6 +48,7 @@ jobs:
             sandip2025/myapp:${{ github.sha }}
             sandip2025/myapp:v1.0.0
             sandip2025/myapp:staging
+
 
 
 
