--- a/.github/workflows/dedcr.yml
+++ b/.github/workflows/dedcr.yml
@@ -24,6 +24,8 @@ jobs:
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+        with:
+          args: -X
 
       # 3️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
