--- a/.github/workflows/deedcr.yml
+++ b/.github/workflows/deedcr.yml
@@ -9,8 +9,8 @@ on:
       - master
 
 jobs:
-  build-and-push:
-    name: Build, Scan & Push Docker Image
+  build-scan-push:
+    name: Build, Sonar Scan & Push Docker Image
     runs-on: ubuntu-latest
 
     steps:
@@ -18,21 +18,28 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v4
 
-      # 2️⃣ Sonar Scan
+      # 2️⃣ SonarQube Scan
       - name: Sonar Scan
         uses: sonarsource/sonarqube-scan-action@v2
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
           SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
         with:
-          args: -X
+          args: >
+            -Dsonar.login=${{ secrets.SONAR_TOKEN }}
+            -Dsonar.projectKey=myapp
+            -Dsonar.projectName=myapp
+            -Dsonar.projectVersion=1.0
+            -Dsonar.sources=.
+            -Dsonar.sourceEncoding=UTF-8
+            -Dsonar.qualitygate.wait=true
 
       # 3️⃣ Set up Docker Buildx
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
       # 4️⃣ Login to Docker Hub
-      - name: Login to Docker Hub
+      - name: Docker Hub Login
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
